--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="IMG_2570.heic" alt="Profile Picture">
+					<img class="profile-pic" src="IMG_2570 Small.jpeg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
