--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Bethany Gormon</p>
+					<p class="text-name">Bethany Gormont</p>
 					<p class="text-title-company">Realtor</p>
 					<p class="text-title-company">Thrive Realty Co</p>
 				</div>
